# Context_Lens_Ragger

./: .env.example  Backend_Readme.md  LICENSE  Readme.md  pyproject.toml
backend/: clear_chroma_db.py  clear_sql_db.py  constants.py  create_tables.py  main.py
backend/api/: routes.py
backend/document_store/: base.py  chroma_store.py
backend/models/: models.py
backend/services/: database.py  ingest_service.py  rag_service.py
backend/utility/: parser.py
chroma_index/: chroma.sqlite3
evaluation_scripts/: evaluate_chains.py
frontend/: .env.example  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  InlineCitation.tsx  SourceBubble.tsx
