[tool.poetry]
name = "sia-chat-QnA"
version = "0.0.1"
description = ""
authors = ["BobErgot"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
langchain = "^0.2.14"
langsmith =  "^0.1.106"
langchain-community = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-google-genai = "^1.0.10"
langchain-anthropic = "^0.1.23"
langchain-fireworks = "^0.1.7"
langserve = {extras = ["server"], version = "^0.2.2"}
fastapi = "^0.112.2"
pydantic = "^2.8.2"
uvicorn = "^0.30.6"
beautifulsoup4 = "^4.12.3"
weaviate-client = "^4.7.1"
psycopg2 = "^2.9.9"
lxml = "^5.3.0"
voyageai = "^0.2.3"
pillow = "^10.4.0"
tiktoken = "^0.7.0"
cohere = "5.8.1"
python-dotenv = "^1.0.1"
langchain-chroma = "^0.1.3"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
pypdf = "^4.3.1"
unstructured = "^0.15.8"
python-docx = "^1.1.2"
pdfminer-six = "^20240706"
pi-heif = "^0.18.0"
matplotlib = "^3.9.2"
unstructured-inference = "^0.7.36"
cairosvg = "^2.7.1"
docx2txt = "^0.8"
aiofiles = "^24.1.0"
transformers = "^4.44.2"
pytesseract = "^0.3.13"
nltk = "^3.9.1"
cairocffi = "^1.7.1"
svgwrite = "^1.4.3"
langchain-huggingface = "^0.0.3"


[tool.poetry.group.lint.dependencies]
pytest = "^7.3.0"
ruff = "^0.2.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
